--- a/src/app/pages/account/dashboard/dashboard.component.html
+++ b/src/app/pages/account/dashboard/dashboard.component.html
@@ -345,8 +345,9 @@
                                         <tbody>
                                             <tr *ngFor="let product of OrderTrackingListByOrderId(lst.orderId)">
                                                 <td>
-                                                    <img *ngIf="product?.setNo>0" [src]="ProductImage+product?.productId+'/productSetImage/'+product?.setNo+'/'+product?.productImg[0]" alt="">
-                                                    <img *ngIf="product?.setNo==0" [src]="ProductImage+product?.productId+'/productColorImage/'+product?.productSizeColorId+'/'+product?.productImg[0]" alt=""> {{ product?.productName }}
+                                                    <!-- <img *ngIf="product?.setNo>0" [src]="ProductImage+product?.productId+'/productSetImage/'+product?.setNo+'/'+product?.productImg[0]" alt="">
+                                                    <img *ngIf="product?.setNo==0" [src]="ProductImage+product?.productId+'/productColorImage/'+product?.productSizeColorId+'/'+product?.productImg[0]" alt="">  -->
+                                                    {{ product?.productName }}
                                                 </td>
                                                 <td>
                                                     {{ product?.salePrice | currency:productService?.Currency.currency:'symbol'}}
