--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -12,7 +12,10 @@
                     </div>
                 </div>
                 <div class="col-lg-5 text-right">
-                    <ul class="header-dropdown">
+                    <span class="Logininfo" *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
+                        <a (click)="Login()" class="btn btn-solid btn-solid-small"><i
+                        class="fa fa-user" aria-hidden="true"></i>Login</a></span>
+                    <ul class="header-dropdown" *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
                         <!--  <li class="compare">
                            <a [routerLink]="['/shop/compare']"><i class="fa fa-random" aria-hidden="true"></i>Compare</a> 
                             &nbsp;
@@ -21,13 +24,11 @@
                          <a [routerLink]="['/shop/wishlist']"><i class="fa fa-heart" aria-hidden="true"></i>Wishlist</a>
                             &nbsp;
                         </li> -->
-                        <li class="onhover-dropdown mobile-account"
-                            *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
+                        <!-- <li class="onhover-dropdown mobile-account" *ngIf="LoggedInUser==[] || LoggedInUser==undefined || LoggedInUser?.length==0">
                             <span class="Logininfo"><a (click)="Login()" class="btn btn-solid btn-solid-small"><i
                                         class="fa fa-user" aria-hidden="true"></i>Login</a></span>
-                        </li>
-                        <li class="onhover-dropdown mobile-account"
-                            *ngIf="LoggedInUser!=[] && LoggedInUser!=undefined && LoggedInUser?.length>0">
+                        </li> -->
+                        <li class="onhover-dropdown mobile-account">
                             <i class="fa fa-user" aria-hidden="true"></i> {{LoggedInUser[0].name}}
                             <ul class="onhover-show-div">
                                 <li>
