--- a/src/app/shop/checkout/success/success.component.html
+++ b/src/app/shop/checkout/success/success.component.html
@@ -37,8 +37,7 @@
                     <ul class="order-detail">
                         <li><span>order ID:</span> {{ orderDetails[0].orderNumber }}</li>
                         <li><span>Order Date:</span> {{ orderDetails[0].orderDate | date : 'MMM dd, yyyy'}}</li>
-                        <li><span>Order Total:</span>
-                            {{ orderDetails[0].totalAmount | currency:productService?.Currency.currency:'symbol' }}
+                        <li><span>Order Total:</span> {{ orderDetails[0].totalAmount | currency:productService?.Currency.currency:'symbol' }}
                         </li>
                         <!-- <li><span>Payment Method:</span> Credit Card (**3569)</li> -->
                     </ul>
@@ -93,9 +92,7 @@
                     <tbody>
                         <tr *ngFor="let product of orderDetails[0].orderDetails">
                             <td>
-                                <img src="assets/images/product/fashion/19.jpg" alt="Product" style="display:none;"
-                                    class="checkout-prouduct-img">
-                                {{ product?.productName }}
+                                <img src="assets/images/product/fashion/19.jpg" alt="Product" style="display:none;" class="checkout-prouduct-img"> {{ product?.productName }}
                             </td>
                             <td>
                                 {{ product?.salePrice | currency:productService?.Currency.currency:'symbol'}}
@@ -146,8 +143,7 @@
                                 <b>{{ getTotalGSTAmount() | currency:productService?.Currency.currency:'symbol'}}</b>
                             </td>
                             <td>
-                                <span
-                                    style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
                                     {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
                             </td>
                         </tr>
@@ -160,8 +156,7 @@
                             <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
                             <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
                             <td colspan="2">
-                                <span
-                                    style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
                                     <b>Free Packing</b></span>
                             </td>
                         </tr>
@@ -172,8 +167,7 @@
                             <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
                             <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
                             <td colspan="2">
-                                <span
-                                    style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
                                     {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
                             </td>
                         </tr>
