--- a/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
@@ -32,20 +32,25 @@
                     <div class="row">
                         <div class="col-sm-4 col-xl-3">
                             <div class="thumbnail-imgs">
-                                <div *ngFor="let image of  productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg; index as i" class="thumbnail-img">
+                                <div *ngFor="let image of  productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg; index as i"
+                                    class="thumbnail-img">
                                     <div class="owl-thumb" [class.active]="i == activeSlide">
-                                        <img [defaultImage]="'assets/images/product/placeholder.jpg'" [lazyLoad]="ProductImage+productkart[0]?.productID+'/productSetImage/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.setNo+'/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg[i]"
-                                            [alt]="image.alt" class="img-fluid" (click)="owlCar.to(activeSlide = i.toString())">
+                                        <img [defaultImage]="'assets/images/product/placeholder.jpg'"
+                                            [lazyLoad]="ProductImage+productkart[0]?.productID+'/productSetImage/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.setNo+'/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg[i]"
+                                            [alt]="image.alt" class="img-fluid"
+                                            (click)="owlCar.to(activeSlide = i.toString())">
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-8 col-xl-9 product-carousel">
                             <owl-carousel-o [options]="ProductDetailsMainSliderConfig" #owlCar class="product-slick">
-                                <ng-container *ngFor="let image of productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg; index as i">
+                                <ng-container
+                                    *ngFor="let image of productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg; index as i">
                                     <ng-template carouselSlide [id]="i">
                                         <div>
-                                            <img [defaultImage]="'assets/images/product/placeholder.jpg'" [lazyLoad]="ProductImage+productkart[0]?.productID+'/productSetImage/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.setNo+'/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg[i]"
+                                            <img [defaultImage]="'assets/images/product/placeholder.jpg'"
+                                                [lazyLoad]="ProductImage+productkart[0]?.productID+'/productSetImage/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.setNo+'/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg[i]"
                                                 [alt]="image.alt" class="img-fluid">
                                         </div>
                                     </ng-template>
@@ -74,10 +79,12 @@
                     </div>
                     <div class="product-buttons row mt-5">
                         <div class="col-6 mb-2">
-                            <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false" (click)="addToCart(1)">add to cart</a>
+                            <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false"
+                                (click)="addToCart(1)">add to cart</a>
                         </div>
                         <div class="col-6 mb-2">
-                            <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false" (click)="addToCart(2)">buy now</a>
+                            <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false"
+                                (click)="addToCart(2)">buy now</a>
                         </div>
                     </div>
                 </div>
@@ -86,17 +93,20 @@
                     <div class="product-right">
                         <h4><b>{{ productkart[0]?.productName }}</b></h4>
                         <h4>
-                            <del *ngIf="productkart[0]?.productSizeSet[bigProductImageIndex]?.discount > 0">{{  productkart[0]?.productSizeSet[bigProductImageIndex]?.price | currency: productService.Currency?.currency:'symbol' }}</del>
+                            <del
+                                *ngIf="productkart[0]?.productSizeSet[bigProductImageIndex]?.discount > 0">{{  productkart[0]?.productSizeSet[bigProductImageIndex]?.price | currency: productService.Currency?.currency:'symbol' }}</del>
                             <span *ngIf="productkart[0]?.productSizeSet[bigProductImageIndex]?.discount > 0">
                                 {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.discount }}%
                                 off</span>
                         </h4>
 
                         <h5>
-                            <span>Price per set</span> {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.salePrice | currency: productService.Currency?.currency:'symbol' }}
+                            <span>Price per set</span>
+                            {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.salePrice | currency: productService.Currency?.currency:'symbol' }}
                         </h5>
                         <h3>
-                            Price per piece: {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.averagePrice | currency: productService.Currency?.currency:'symbol' }}
+                            Price per piece:
+                            {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.averagePrice | currency: productService.Currency?.currency:'symbol' }}
                         </h3>
                         <h4></h4>
                         <span>
@@ -116,7 +126,8 @@
 
                             <div class="size-box">
                                 <ul>
-                                    <li [class.active]="selectedSize == list" *ngFor="let list of SetList(productkart[0]?.productSizeSet);index as i">
+                                    <li [class.active]="selectedSize == list"
+                                        *ngFor="let list of SetList(productkart[0]?.productSizeSet);index as i">
                                         <a href="javascript:void(0)" (click)="selectSize(i)">
                                             {{ list }}
                                         </a>
@@ -148,7 +159,9 @@
                     <input type="checkbox" [(ngModel)]="item.isSelected"   [value]="item.setNo" name="checkIn" id="{{myIndex}}">
                 </td> -->
                                         <td>
-                                            <input type="checkbox" style="margin-top: 5px;" [(ngModel)]="item.isSelected" [value]="item.setNo" name="checkIn" id="{{myIndex}}"> {{item.setNo}}
+                                            <input type="checkbox" style="margin-top: 5px;"
+                                                [(ngModel)]="item.isSelected" [value]="item.setNo" name="checkIn"
+                                                id="{{myIndex}}"> {{item.setNo}}
                                         </td>
                                         <td>
                                             {{item.piece}}
@@ -164,7 +177,10 @@
                                                             <i class="ti-minus"></i>
                                                         </button>
                                                     </span>
-                                                    <input type="text" name="quantity" id="{{ 'txtqty' + myIndex}}" style="width: 45px; height: 27px;" class="form-control input-number" [value]="item.selectedQty" disabled />
+                                                    <input type="text" name="quantity" id="{{ 'txtqty' + myIndex}}"
+                                                        style="width: 45px; height: 27px;"
+                                                        class="form-control input-number" [value]="item.selectedQty"
+                                                        disabled />
                                                     <span class="input-group-prepend">
                                                         <button type="button" class="btn quantity-right-plus"
                                                             data-type="plus" (click)="increment(myIndex,item,item.qty)">
@@ -216,7 +232,15 @@
 
                         <div class="border-product">
                             <h6 class="product-title">product details</h6>
-                            <p>{{ productkart[0]?.description }}</p>
+                            <div [innerHTML]="productkart[0]?.shortDetails"></div>
+                            <!-- <div >
+                                <ol>
+                                    <li><span>100% Original Products</span></li>
+                                    <li><span>Free Delivery on order above Rs 799</span></li>
+                                    <li><span>Pay on delivery might be available</span></li>
+                                    <li><span>Easy 30 days returns and exchanges</span></li>
+                                </ol>
+                            </div> -->
                         </div>
                         <div class="border-product">
                             <h6 class="product-title">share it</h6>
@@ -244,14 +268,17 @@
                             <ngb-tab>
                                 <ng-template ngbTabTitle>Description</ng-template>
                                 <ng-template ngbTabContent>
-                                    <p>{{productkart[0]?.description }}</p>
+                                    <p [innerHTML]="productkart[0]?.description"></p>
+
+                                 
                                 </ng-template>
                             </ngb-tab>
                             <ngb-tab>
                                 <ng-template ngbTabTitle>Video</ng-template>
                                 <ng-template ngbTabContent>
                                     <div class="mt-3 text-center">
-                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/BUWzX78Ye_8" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/BUWzX78Ye_8"
+                                            allow="autoplay; encrypted-media" allowfullscreen></iframe>
                                     </div>
                                 </ng-template>
                             </ngb-tab>
