--- a/src/app/home/fashion/fashion-one/fashion-one.component.html
+++ b/src/app/home/fashion/fashion-one/fashion-one.component.html
@@ -8,7 +8,7 @@
 <!-- Home slider End -->
 
 <!-- collection banner start-->
-<section>
+<!-- <section>
     <div class="container">
         <div class="row">
             <div class="col-md-10 offset-md-2">
@@ -30,11 +30,11 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <!-- collection banner End -->
 
 <!-- Product slider start-->
-<div class="title1 py-3">
+<!-- <div class="title1 py-3">
     <h4>special offer</h4>
     <h2 class="title-inner1">top collection</h2>
 </div>
@@ -52,7 +52,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <section>
     <div class="container">
         <div class="row">
